# sza_i5e_teknos

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
launch/: launch_example1.launch.py
ros2_py_template/: __init__.py
src/: szivrajz.py
